--- a/Personagens.html
+++ b/Personagens.html
@@ -15,10 +15,10 @@
 
         <!--Div da imagem das personagens-->
        <div id="meninas">
-        <img class="s" src="../Autoria/miniS.png">
-        <img class="y" src="../Autoria/miniY.png">  
-        <img class="n" src="../Autoria/miniN.png">
-        <img class="m" src="../Autoria/miniM.png">
+        <img class="s" src="../DokiDoki/imgs/miniS.png">
+        <img class="y" src="../DokiDoki/imgs/miniY.png">  
+        <img class="n" src="../DokiDoki/imgs/miniN.png">
+        <img class="m" src="../DokiDoki/imgs/miniM.png">
        </div>
 
        <!--Div dos textos-->
