--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         
         <!--Div da direita (imagem das personagens)-->
         <div id="meninas">
-            <img class="meninas" src="../Autoria/meninas.png">
+            <img class="meninas" src="../DokiDoki/imgs/meninas.png">
         </div>
         
     </body>
