--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <!--Div da esquerda (menu)-->
         <div id="escolhe">
-            <img class="logo" src="../Autoria/logo.png">
+            <img class="logo" src="../DokiDoki/imgs/logo.png">
             <h1 class="menu">MENU</h1>
             <nav>
                 <ul class="opcoes">
