--- a/FIM.html
+++ b/FIM.html
@@ -36,7 +36,7 @@
     <body>
         <!--Div do cabeçalho-->
         <div id="cabeca">
-            <img class="logo" src="../Autoria/logo.png" alt="Logo">
+            <img class="logo" src="../DokiDoki/imgs/logo.png" alt="Logo">
             <p class="p1">Agradecimentos</p>
         </div>
        
