--- a/POEMAS.html
+++ b/POEMAS.html
@@ -8,22 +8,22 @@
     <body>
         <!--cabeçalho-->
         <div id="cabeca">
-            <img class="logo" src="../Autoria/logo.png">
+            <img class="logo" src="../DokiDoki/imgs/logo.png">
             <h1 class="titulo"> Primeiros Poemas </h1>
         </div>
 
         <!--descrição e imagem dos poemas-->
         <h1 class="S">Primeiro Poema: Sayori</h1>
-        <img class="poemaS" src="../Autoria/PoemaS.png">
+        <img class="poemaS" src="../DokiDoki/imgs/PoemaS.png">
 
         <h1 class="Y">Primeiro Poema: Yuri</h1>
-        <img class="poemaY" src="../Autoria/PoemaY.png">
+        <img class="poemaY" src="../DokiDoki/imgs/PoemaY.png">
 
         <h1 class="N">Primeiro Poema: Natsuki</h1>
-        <img class="poemaN" src="../Autoria/PoemaN.png">
+        <img class="poemaN" src="../DokiDoki/imgs/PoemaN.png">
 
         <h1 class="M">Primeiro Poema: Monika</h1>
-        <img class="poemaM" src="../Autoria/PoemaM.png">
+        <img class="poemaM" src="../DokiDoki/imgs/PoemaM.png">
 
         <a class="voltar" href="DokiDoki.html">
             Voltar
