--- a/Personagens.html
+++ b/Personagens.html
@@ -9,7 +9,7 @@
     <body>
         <!--Div do cabeçalho-->
         <div id="cabeca">
-            <img class="logo" src="../Autoria/logo.png" >
+            <img class="logo" src="../DokiDoki/imgs/logo.png" >
             <h1 class="titulo"> Personagens </h1>
         </div>
 
