ajeitando botão voltar

--- a/POEMAS.html
+++ b/POEMAS.html
@@ -25,7 +25,7 @@
         <h1 class="M">Primeiro Poema: Monika</h1>
         <img class="poemaM" src="../DokiDoki/imgs/PoemaM.png">
 
-        <a class="voltar" href="DokiDoki.html">
+        <a class="voltar" href="index.html">
             Voltar
         </a>
     </body>
