--- a/Personagens.html
+++ b/Personagens.html
@@ -63,7 +63,7 @@
         
         <!--Div do 'botão' "voltar"-->
     <div id="volte">
-        <a class="voltar" href="DokiDoki.html">
+        <a class="voltar" href="index.html">
             Voltar
         </a>
     </div>
