--- a/voteaqui.html
+++ b/voteaqui.html
@@ -38,7 +38,7 @@
         </div>
         <!--Div do 'botão' "voltar"-->
         <div id="volte">
-            <a class="voltar" href="DokiDoki.html">
+            <a class="voltar" href="index.html">
                 Voltar
             </a>
         </div>
