--- a/FIM.html
+++ b/FIM.html
@@ -42,7 +42,7 @@
        
         <!--Div do 'botão' "voltar"-->
         <div id="volte">
-            <a class="voltar" href="DokiDoki.html">
+            <a class="voltar" href="index.html">
                 Voltar
             </a>
         </div>
