--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
 
         <!--Div do 'botão' "voltar"-->
         <div id="volte">
-            <a class="voltar" href="DokiDoki.html">
+            <a class="voltar" href="index.html">
                 Voltar
             </a>
         </div>
