--- a/voteaqui.html
+++ b/voteaqui.html
@@ -14,7 +14,7 @@
     <body>
         <!--Div do cabeçalho-->
         <div id="cabeca">
-            <img class="logo" src="../Autoria/logo.png" alt="Logo">
+            <img class="logo" src="../DokiDoki/imgs/logo.png" alt="Logo">
             <h1 class="titulo">Eleição para presidente do Club de Literatura!</h1>
         </div>
         
