ajeitando logo login

--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <body>
         <!--Div do cabeçalho-->
         <div id="cabeca">
-            <img class="logo" src="../Autoria/logo.png" alt="Logo">
+            <img class="logo" src="../DokiDoki/imgs/logo.png" alt="Logo">
             <h1 class="titulo">Login</h1>
         </div>
         
