--- a/Personagens.html
+++ b/Personagens.html
@@ -2,16 +2,40 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <!--CSS padrão-->
         <link rel="stylesheet" href="justyuri.css">
+         <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        
         <title>Personagens</title>
     </head>
     <body>
         <!--Div do cabeçalho-->
-        <div id="cabeca">
-            <img class="logo" src="../DokiDoki/imgs/logo.png" >
+       <!-- <div id="cabeca">
+            <img class="logo" src="../Autoria/logo.png" >
             <h1 class="titulo"> Personagens </h1>
         </div>
+        -->
+
+        <nav class="navbar">
+            <div class="logo">
+                <a href="../DokiDoki/imgs/logo.png">Meu Logo</a>
+            </div>
+            <ul class="menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li class="dropdown">
+                    <a href="#">Serviços</a>
+                    <ul class="dropdown-content">
+                        <li><a href="#">Serviço1</a></li>
+                        <li><a href="#">Serviço2</a></li>
+                        <li><a href="#">Serviço3</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+        </nav>
 
         <!--Div da imagem das personagens-->
        <div id="meninas">
@@ -63,11 +87,17 @@
         
         <!--Div do 'botão' "voltar"-->
     <div id="volte">
-        <a class="voltar" href="index.html">
+        <a class="voltar" href="DokiDoki.html">
             Voltar
         </a>
     </div>
 
+
+    <!-- JavaScript (Opcional) -->
+    <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     </body>
 
 </html>
