--- a/Personagens.html
+++ b/Personagens.html
@@ -20,7 +20,7 @@
 
         <nav class="navbar">
             <div class="logo">
-                <a href="../DokiDoki/imgs/logo.png">Meu Logo</a>
+                <a href="#"><img class="logo" src="../DokiDoki/imgs/logo.png"></a>
             </div>
             <ul class="menu">
                 <li><a href="#">Home</a></li>
