--- a/Personagens.html
+++ b/Personagens.html
@@ -23,17 +23,17 @@
                 <a href="#"><img class="logo" src="../DokiDoki/imgs/logo.png"></a>
             </div>
             <ul class="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Sobre</a></li>
+                <li><a class="apersonagens" href="#">Personagens</a></li>
                 <li class="dropdown">
-                    <a href="#">Serviços</a>
+                    <a class="menuSuspenso" href="#">Opcões</a>
                     <ul class="dropdown-content">
-                        <li><a href="#">Serviço1</a></li>
-                        <li><a href="#">Serviço2</a></li>
-                        <li><a href="#">Serviço3</a></li>
+                        <li><a href="../DokiDoki/POEMAS.html"></a>Poemas</li>
+                        <li><a href="https://www.youtube.com/watch?v=NjKZG9HYP7U">Trailer</a></li>
+                        <li><a href="../DokiDoki/login.html">Votar</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="../DokiDoki/index.html">Voltar</a></li>
+                
             </ul>
         </nav>
 
