--- a/Personagens.html
+++ b/Personagens.html
@@ -27,12 +27,12 @@
                 <li class="dropdown">
                     <a class="menuSuspenso" href="#">Opcões</a>
                     <ul class="dropdown-content">
-                        <li><a href="../DokiDoki/POEMAS.html"></a>Poemas</li>
-                        <li><a href="https://www.youtube.com/watch?v=NjKZG9HYP7U">Trailer</a></li>
-                        <li><a href="../DokiDoki/login.html">Votar</a></li>
+                        <li><a class="poemas" href="../DokiDoki/POEMAS.html"></a>Poemas</li>
+                        <li><a class="trailer" href="https://www.youtube.com/watch?v=NjKZG9HYP7U">Trailer</a></li>
+                        <li><a class="votar" href="../DokiDoki/login.html">Votar</a></li>
                     </ul>
                 </li>
-                <li><a href="../DokiDoki/index.html">Voltar</a></li>
+                <li><a class="voltar" href="../DokiDoki/index.html">Voltar</a></li>
                 
             </ul>
         </nav>
