--- a/Personagens.html
+++ b/Personagens.html
@@ -19,11 +19,11 @@
         -->
 
         <nav class="navbar">
-            <div class="logo">
+            <div>
                 <a href="#"><img class="logo" src="../DokiDoki/imgs/logo.png"></a>
             </div>
             <ul class="menu">
-                <li><a class="apersonagens" href="#">Personagens</a></li>
+                <li><a class="personagens" href="#">Personagens</a></li>
                 <li class="dropdown">
                     <a class="menuSuspenso" href="#">Opcões</a>
                     <ul class="dropdown-content">
@@ -32,8 +32,7 @@
                         <li><a class="votar" href="../DokiDoki/login.html">Votar</a></li>
                     </ul>
                 </li>
-                <li><a class="voltar" href="../DokiDoki/index.html">Voltar</a></li>
-                
+                <li><a class="voltar" href="../DokiDoki/index.html">Voltar</a></li>  
             </ul>
         </nav>
 
@@ -84,13 +83,6 @@
             nata em geral. Ama literatura e por isso resolveu criar o clube.</br>
         </p>
         </div>
-        
-        <!--Div do 'botão' "voltar"-->
-    <div id="volte">
-        <a class="voltar" href="DokiDoki.html">
-            Voltar
-        </a>
-    </div>
 
 
     <!-- JavaScript (Opcional) -->
