ajustes do navbar (ainda

--- a/Personagens.html
+++ b/Personagens.html
@@ -19,20 +19,22 @@
         -->
 
         <nav class="navbar">
-            <div>
-                <a href="#"><img class="logo" src="../DokiDoki/imgs/logo.png"></a>
+            <div class="logo">
+                <a href="#"><img src="../DokiDoki/imgs/logo.png"></a>
             </div>
             <ul class="menu">
-                <li><a class="personagens" href="#">Personagens</a></li>
+                <li><a href="#">Personagens</a></li>
                 <li class="dropdown">
-                    <a class="menuSuspenso" href="#">Opcões</a>
+                    <a href="#">Opcões</a>
                     <ul class="dropdown-content">
-                        <li><a class="poemas" href="../DokiDoki/POEMAS.html"></a>Poemas</li>
-                        <li><a class="trailer" href="https://www.youtube.com/watch?v=NjKZG9HYP7U">Trailer</a></li>
-                        <li><a class="votar" href="../DokiDoki/login.html">Votar</a></li>
+                        <li><a href="../DokiDoki/POEMAS.html">Poemas</a></li>
+
+                        <li><a href="https://www.youtube.com/watch?v=NjKZG9HYP7U">Trailer</a></li>
+
+                        <li><a href="../DokiDoki/login.html">Votar</a></li>
                     </ul>
                 </li>
-                <li><a class="voltar" href="../DokiDoki/index.html">Voltar</a></li>  
+                <li><a href="../DokiDoki/index.html">Voltar</a></li>  
             </ul>
         </nav>
 
