tentando concertar navbar

--- a/Personagens.html
+++ b/Personagens.html
@@ -22,20 +22,23 @@
             <div class="logo">
                 <a href="#"><img src="../DokiDoki/imgs/logo.png"></a>
             </div>
-            <ul class="menu">
-                <li><a href="#">Personagens</a></li>
-                <li class="dropdown">
-                    <a href="#">Opcões</a>
-                    <ul class="dropdown-content">
-                        <li><a href="../DokiDoki/POEMAS.html">Poemas</a></li>
-
-                        <li><a href="https://www.youtube.com/watch?v=NjKZG9HYP7U">Trailer</a></li>
-
-                        <li><a href="../DokiDoki/login.html">Votar</a></li>
-                    </ul>
+            <ul class="nav-menu">
+                <li class="nav-item active">
+                    <a class="nav-per" href="#">Personagens</a>
                 </li>
-                <li><a href="../DokiDoki/index.html">Voltar</a></li>  
+            <li class="nav-item-dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Opções
+                    </a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="../DokiDoki/POEMAS.html">Poemas</a>
+                <a class="dropdown-item" href="../DokiDoki/login.html">Votar</a>
+                <a class="dropdown-item" href="../DokiDoki/index.html">Voltar</a>
+              </div>
+                </li>
+                <li class="nav-item-link"><a href="../DokiDoki/index.html">Voltar</a></li>  
             </ul>
+        </ul>
         </nav>
 
         <!--Div da imagem das personagens-->
