--- a/Personagens.html
+++ b/Personagens.html
@@ -25,23 +25,20 @@
             </button>
           
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Mais
+                    Opções
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Origens</a>
-                    <a class="dropdown-item" href="#">Clases</a>
-                    <a class="dropdown-item" href="#">Rituais</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Ajuda</a>
+                    <a class="dropdown-item" href="../DokiDoki/POEMAS.html">Poemas</a>
+                    <a class="dropdown-item" href="../DokiDoki/login.html">Votar</a>
                   </div>
+                  <a class="nav-link dropdown-toggle" href="../DokiDoki/index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Voltar
+                  </a>
                 </li>
               </ul>
-              <form class="form-inline my-2 my-lg-0" >
-                <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
-                <button class="btn btn-custom-search my-2 my-sm-0" type="submit" >Buscar</button>
-              </form>
             </div>
           </nav>
 
