--- a/Personagens.html
+++ b/Personagens.html
@@ -20,12 +20,9 @@
 
         <nav class="navbar">
             <a class="navbar-brand" href="#">Personagens</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
+        
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Opções
@@ -34,12 +31,11 @@
                     <a class="dropdown-item" href="../DokiDoki/POEMAS.html">Poemas</a>
                     <a class="dropdown-item" href="../DokiDoki/login.html">Votar</a>
                   </div>
-                  <a class="nav-link dropdown-toggle" href="../DokiDoki/index.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Voltar
-                  </a>
-                </li>
-              </ul>
-            </div>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="../DokiDoki/index.html">Voltar <span class="sr-only">(current)</span></a>
+                  </li>
+        </ul>
           </nav>
 
         <!--Div da imagem das personagens-->
