--- a/Personagens.html
+++ b/Personagens.html
@@ -36,6 +36,7 @@
                     <a class="nav-link" href="../DokiDoki/index.html">Voltar <span class="sr-only">(current)</span></a>
                   </li>
         </ul>
+        </div>
           </nav>
 
         <!--Div da imagem das personagens-->
