--- a/Personagens.html
+++ b/Personagens.html
@@ -18,7 +18,10 @@
         </div>
         -->
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar">
+            <div class="logo">
+                <img class="LOGO" src="../DokiDoki/imgs/logo.png">
+            </div>
             <a class="navbar-brand" href="#">Personagens</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
