--- a/Personagens.html
+++ b/Personagens.html
@@ -18,7 +18,7 @@
         </div>
         -->
 
-        <nav class="navbar">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="logo">
                 <img class="LOGO" src="../DokiDoki/imgs/logo.png">
             </div>
