--- a/Personagens.html
+++ b/Personagens.html
@@ -13,8 +13,14 @@
     <body>
         <!--Div do cabeçalho-->
        <div id="cabeca">
-            <img class="logo" src="../Autoria/logo.png" >
+            <img class="logo" src="../DokiDoki/imgs/logo.png" >
             <h1 class="titulo"> Personagens </h1>
+        </div>
+        <!--Div do 'botão' "voltar"-->
+        <div id="volte">
+        <a class="voltar" href="DokiDoki.html">
+            Voltar
+        </a>
         </div>
         
         
