Teste "row" novo

--- a/Personagens.html
+++ b/Personagens.html
@@ -17,15 +17,31 @@
             <h1 class="titulo"> Personagens </h1>
         </div>
 
-        <!--Div do 'botão' "voltar"-->
+        <div class="row">
+          <img class="image" src="../DokiDoki/imgs/miniS.png" alt="Sayori">
+          <div class="text">
+              <h1 class="tituloS">Sayori</h1>
+              <p><b>Nome:</b> Sayori</br>
+                <b>Idade:</b> 18</br>
+                <b>Resumo:</b> Sayori é amiga de infância do nosso personagem e o
+                maior motivo para o mesmo decidir visitar o clube de literatura. 
+                Ela é vice presidente do clube, bastante animada e
+                energética, contagiando todas as meninas com sua personalidade.</br></p>
+          </div>
+      </div>
+
+
+
+
+        <!--Div do 'botão' "voltar"
         <div id="volte">
         <a class="voltar" href="DokiDoki.html">
             Voltar
         </a>
-        </div>
+        </div>-->
 
 
-        <div class="row justify-content-md-center">
+        <!--<div class="row justify-content-md-center">
           <div class="col-md-7 order-md-2">
             <h2 class="Ss">Sayori</h2>
             <p class="tS">
@@ -91,7 +107,7 @@
             <div class="col-md-5 order-md-1">
               <img class="m" src="../DokiDoki/imgs/miniM.png" alt="Generic placeholder image">
             </div>
-          </div>
+          </div>-->
 
         
 
@@ -99,8 +115,8 @@
 
      <!-- FOOTER -->
      <footer class="container">
-        <p class="float-right"><a style="color: blueviolet;"href="#">Voltar para o início</a></p>
-        <p>Ordem Paranormal. . <a style="color: blueviolet;" href="#">PRIVACIDADE</a> · <a style="color:blueviolet" href="#">TERMOS DE USO</a></p>
+        <p class="float-right"><a class="voltar" style="color: rgb(174, 12, 131);" href="../DokiDoki/index.html">Voltar</a></p>
+        <p>Doki Doki <a style="color: rgb(174, 12, 131)" href="#">PRIVACIDADE</a> · <a style="color:rgb(174, 12, 131)" href="#">TERMOS DE USO</a></p>
       </footer>
     </main>
         
