--- a/Personagens.html
+++ b/Personagens.html
@@ -17,18 +17,60 @@
             <h1 class="titulo"> Personagens </h1>
         </div>
 
-        <div class="row">
-          <img class="image" src="../DokiDoki/imgs/miniS.png" alt="Sayori">
-          <div class="text">
+        <div class="row1">
+          <img class="s" src="../DokiDoki/imgs/miniS.png" alt="Sayori">
+          <div class="Ss">
               <h1 class="tituloS">Sayori</h1>
-              <p><b>Nome:</b> Sayori</br>
-                <b>Idade:</b> 18</br>
-                <b>Resumo:</b> Sayori é amiga de infância do nosso personagem e o
-                maior motivo para o mesmo decidir visitar o clube de literatura. 
-                Ela é vice presidente do clube, bastante animada e
-                energética, contagiando todas as meninas com sua personalidade.</br></p>
+              <p class="tS"><b>Nome:</b> Sayori<br>
+                <b>Idade:</b> 18<br>
+                <b>Resumo:</b> Sayori é amiga de infância do nosso personagem e o<br>
+                maior motivo para o mesmo decidir visitar o clube de literatura. <br>
+                Ela é vice presidente do clube, bastante animada e<br>
+                energética, contagiando todas as meninas com sua personalidade.<br></p>
           </div>
       </div>
+
+      <div class="row2">
+        <img class="y" src="../DokiDoki/imgs/miniY.png" alt="Yuri">
+        <div class="Yy">
+            <h1 class="tituloY">Yuri</h1>
+            <p class="tY">
+              <b>Nome:</b> Yuri<br>
+              <b>Idade:</b> 18<br>
+              <b>Resumo:</b> Yuri é uma menina tímida e reservada, mas que mostra<br>
+              muito entusiasmo quando o assunto é seu tipo de literatura preferido.<br>
+              Ama livros de terror e com uma leitura mais complexa que refletem<br>
+              no seu tipo de escrita dos poemas.<br></p>
+        </div>
+    </div>
+
+    <div class="row3">
+      <img class="n" src="../DokiDoki/imgs/miniN.png" alt="Sayori">
+      <div class="Nn">
+          <h1 class="tituloN">Natsuki</h1>
+          <p class="tN"><b>Nome:</b> Sayori<br>
+              <b>Nome:</b> Natsuki<br>
+              <b>Idade:</b> 18<br>
+              <b>Resumo:</b> Natsuki é uma menina que ama cozinhar doces e, embora não<br>
+              demonstre, ama compartilha-los com suas amigas. Ela tem uma língua afiada<br>
+              e personalidade forte, ama ler mangás e guarda sua coleção na sala do<br>
+              clube.</br></p>
+      </div>
+  </div>
+
+  <div class="row4">
+    <img class="m" src="../DokiDoki/imgs/miniM.png" alt="Sayori">
+    <div class="Mm">
+        <h1 class="tituloM">Monika</h1>
+        <p class="tM"><b>Nome:</b> Monika<br>
+          <b>Idade:</b> 18<br>
+          <b>Resumo:</b> Monika é a presidente do clube de literatura, conhecida<br>
+          por ser muito inteligente e esforçada. Sempre se preocupa com os<br>
+          membros do clube e garante que todos se sintam acolhidos, uma líder<br>
+          nata em geral. Ama literatura e por isso resolveu criar o clube.<br>
+          </p>
+    </div>
+</div>
 
 
 
@@ -116,7 +158,7 @@
      <!-- FOOTER -->
      <footer class="container">
         <p class="float-right"><a class="voltar" style="color: rgb(174, 12, 131);" href="../DokiDoki/index.html">Voltar</a></p>
-        <p>Doki Doki <a style="color: rgb(174, 12, 131)" href="#">PRIVACIDADE</a> · <a style="color:rgb(174, 12, 131)" href="#">TERMOS DE USO</a></p>
+        <p>Doki Doki · <a style="color: rgb(174, 12, 131)" href="#">PRIVACIDADE</a> · <a style="color:rgb(174, 12, 131)" href="#">TERMOS DE USO</a></p>
       </footer>
     </main>
         
