--- a/voteaqui.html
+++ b/voteaqui.html
@@ -35,7 +35,7 @@
                 <label for="text" style="font-family: cursive; font-size: 20px;">Qual é a sua sugestão para a nova gestão?</label><br>
                 <textarea id="text" name="text" required style="padding: 10px; margin: 10px; border-radius: 4px; border: 1px solid #ccc; width: 250px; height: 50px;"></textarea><br>
               
-                <input type="submit" value="Votar" style="background-color: rgb(174, 12, 131); color: white; padding: 15px 30px; font-size: 18px; border: none; border-radius: 4px; cursor: pointer;">
+                <input type="submit" value="Votar" href="FIM.html" style="background-color: rgb(174, 12, 131); color: white; padding: 15px 30px; font-size: 18px; border: none; border-radius: 4px; cursor: pointer;">
                                 
             </form>
         </div>
