--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
         
         <!--Formulário de Login-->
         <div id="FormularioLogin" style="text-align:center; margin-top: 50px;">
-            <form action="voteaqui.html" method="POST">
+            <form action="../DokiDoki/voteaqui.html" method="POST">
                 <label for="username" style="font-family: cursive; font-size: 20px;">Nome de usuário:</label><br>
                 <input type="text" id="username" name="username" required style="width: 250px; padding: 10px; margin: 10px; border-radius: 4px; border: 1px solid #ccc;"><br>
 
@@ -30,7 +30,7 @@
                 <label for="password" style="font-family: cursive; font-size: 20px;">Senha:</label><br>
                 <input type="password" id="password" name="password" required style="width: 250px; padding: 10px; margin: 10px; border-radius: 4px; border: 1px solid #ccc;"><br>
 
-                <input type="submit" value="Entrar" href = voteaqui.html style="background-color: rgb(174, 12, 131); color: white; padding: 15px 30px; font-size: 18px; border: none; border-radius: 4px; cursor: pointer;" >
+                <input type="submit" value="Entrar" style="background-color: rgb(174, 12, 131); color: white; padding: 15px 30px; font-size: 18px; border: none; border-radius: 4px; cursor: pointer;" >
             </form>
         </div>
 
