--- a/POEMAS.html
+++ b/POEMAS.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="poemas.css">
+        <link rel="stylesheet" href="../DokiDoki/poemas.css">
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         
@@ -34,7 +34,7 @@
         <p class="float-right"><a class="voltar" style="color: rgb(174, 12, 131);" href="../DokiDoki/index.html">Voltar</a></p>
         <p>Doki Doki · <a style="color: rgb(174, 12, 131)" href="#">PRIVACIDADE</a> · <a style="color:rgb(174, 12, 131)" href="#">TERMOS DE USO</a></p>
       </footer>
-    
+    </main>
 
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
