--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
         
         <!--Formulário de Login-->
         <div id="FormularioLogin" style="text-align:center; margin-top: 50px;">
-            <form action="../DokiDoki/voteaqui.html" method="POST">
+            <form action="../DokiDoki/voteaqui.html" method="post">
                 <label for="username" style="font-family: cursive; font-size: 20px;">Nome de usuário:</label><br>
                 <input type="text" id="username" name="username" required style="width: 250px; padding: 10px; margin: 10px; border-radius: 4px; border: 1px solid #ccc;"><br>
 
