--- a/POEMAS.html
+++ b/POEMAS.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../DokiDoki/poemas.css">
-        <!-- Bootstrap CSS -->
+        <!-- Bootstrap CSS 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        
+        -->
         <title>Poemas</title>
     </head>
     <body>
@@ -29,17 +29,18 @@
         <img class="poemaM" src="../DokiDoki/imgs/PoemaM.png">
 
 
-        <!-- FOOTER -->
+        <!-- FOOTER 
      <footer class="container">
         <p class="float-right"><a class="voltar" style="color: rgb(174, 12, 131);" href="../DokiDoki/index.html">Voltar</a></p>
         <p>Doki Doki · <a style="color: rgb(174, 12, 131)" href="#">PRIVACIDADE</a> · <a style="color:rgb(174, 12, 131)" href="#">TERMOS DE USO</a></p>
       </footer>
-    </main>
+    </main>-->
 
-    <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
+    <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+-->
     </body>
 
 </html>
