ajustes no formulario

--- a/voteaqui.html
+++ b/voteaqui.html
@@ -23,7 +23,7 @@
         
         <!--Formulário de votação-->
         <div id="FormularioVotacao" style="text-align:center; margin-top: 50px;">
-            <form action="../DokiDoki/FIM.html" method="POST">
+            <form action="../DokiDoki/FIM.html">
                 <label for="personagem" style="font-family: cursive; font-size: 20px;">Escolha uma das candidatas a presidência:</label><br>
                 <select id="personagem" name="personagem" required style="width: 250px; padding: 10px; margin: 10px; border-radius: 4px; border: 1px solid #ccc;">
                     <option value="yuri">Yuri</option>
