--- a/FIM.html
+++ b/FIM.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../DokiDoki/imgs/poemas.css">
-        <link rel="stylesheet" href="../DokiDoki/imgs/login.css">
-        <link rel="stylesheet" href="../DokiDoki/imgs/voteaqui.css">
+        <link rel="stylesheet" href="../DokiDoki/poemas.css">
+        <link rel="stylesheet" href="../DokiDoki/login.css">
+        <link rel="stylesheet" href="../DokiDoki/voteaqui.css">
 
          <!-- Bootstrap CSS -->
          <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
